RESOLVED FIXED135607
[GStreamer][1.4] Caps negotiation failure in playback pipeline
https://bugs.webkit.org/show_bug.cgi?id=135607
Summary [GStreamer][1.4] Caps negotiation failure in playback pipeline
Philippe Normand
Reported 2014-08-05 09:34:31 PDT
** (WebKitWebProcess:14901): WARNING **: Error: 11, Filter caps do not completely specify the output format. Debug output: gstcapsfilter.c(356): gst_capsfilter_prepare_buf (): /GstPipeline:play/WebKitWebAudioSrc:webkitwebaudiosrc0/GstCapsFilter:capsfilter0: Output caps are unfixed: EMPTY The webkitwebaudiosrc bin uses interleave with this chain upfront for each mono channel: queue ! capsfilter ! audioconvert ! i.sink but audioconvert only handles interleaved buffers so the capsfilter has to use interleaved layout as well. Right now it's using non-interleaved and it somehow works fine when webkitgtk is built against 1.2.x but not in 1.4.0. So let's fix this once for all, using interleaved works fine in 1.2.x and 1.4.x.
Attachments
Patch (2.17 KB, patch)
2014-08-05 09:41 PDT, Philippe Normand
no flags
rebased patch, also using nullptr instead of NULL sentinel (2.17 KB, patch)
2014-08-06 02:58 PDT, Philippe Normand
cgarcia: review+
Philippe Normand
Comment 1 2014-08-05 09:41:47 PDT
WebKit Commit Bot
Comment 2 2014-08-05 09:44:02 PDT
Attachment 236031 [details] did not pass style-queue: ERROR: Source/WebCore/platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:95: Use 0 instead of NULL. [readability/null] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Philippe Normand
Comment 3 2014-08-06 02:58:27 PDT
Created attachment 236085 [details] rebased patch, also using nullptr instead of NULL sentinel
Philippe Normand
Comment 4 2014-08-08 00:49:41 PDT
Note You need to log in before you can comment on or make changes to this bug.