[GStreamer][1.4] Caps negotiation failure in playback pipeline https://bugs.webkit.org/show_bug.cgi?id=135607

Reviewed by Carlos Garcia Campos.

Ensure the capsfilters used in front of interleave negotiate their
caps correctly with audioconvert which requires audio buffers with
interleaved layout.

No new tests, existing webaudio tests will cover this change once
we bump our JHBuild moduleset to GStreamer 1.4.

* platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:
(getGStreamerMonoAudioCaps):

Canonical link: https://commits.webkit.org/153628@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172338 268f45cc-cd09-0410-ab3c-d52691b4dbfc